--- a/style.css
+++ b/style.css
@@ -1,11 +1,25 @@
-.informationtab{
-    border:1px solid black;
-    width: 500px;
-    height: 800px;
-    border-radius: 1px;
-    border-style: solid;
-    
-}
-.role{
-    padding-bottom: 10px;
-}
+/* Add a background color to the body */
+body {
+    background-color: #f2f2f2;
+  }
+  
+  /* Add styles to the header */
+  .container h1 {
+    font-size: 3em;
+    margin-bottom: 0;
+  }
+  
+  .container h2 {
+    font-size: 1.5em;
+    margin-top: 0;
+  }
+  
+  /* Add styles to the columns */
+  .col-md-4 {
+    border: 1px solid #ccc;
+    background-color: #fff;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+  }
+  
